# graph-ds-benchmark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
.github/workflows/: ci.yml  main.yml
include/gdsb/: batcher.h  experiment.h  graph.h  graph_input.h  graph_io.h  graph_io_parameters.h  graph_output.h  mpi_error_handler.h  mpi_graph_io.h  sort_permutation.h  timer.h
src/: experiment.cpp  graph.cpp  graph_input.cpp  graph_io.cpp  graph_output.cpp  mpi_error_handler.cpp  mpi_graph_io.cpp  timer.cpp
test/: batcher.cpp  batcher_tests.cpp  experiment_tests.cpp  graph.cpp  graph_input_tests.cpp  graph_io.cpp  graph_io_tests.cpp  graph_output_tests.cpp  graph_test.cpp  mpi_graph_io_tests.cpp  test_graph.h
test/graphs/: ENZYMES_g1.edges  README.md  aves-songbird-social.edges  reptilia-tortoise-network-pv.edges  small_graph_temporal.edges
